# signalforge

./: CHANGELOG.md  CONTRIBUTING.md  LICENSE  NOTICE  README.md  ROADMAP.md  SECURITY.md  pyproject.toml
.github/: CODEOWNERS  dependabot.yml
.github/workflows/: ci.yml  codeql.yml
config/: repositories.json  sprints.json
docs/: LICENSE.md  architecture.md  protocol-overview.md  threat-model.md
docs/admin/: github-repository-controls.md
docs/decisions/: ADR-0001-repository-purpose.md  ADR-0002-schema-representation.md
docs/operations/: sprint-contract.md  technical-review-checklist.md
docs/rfcs/: 0001-signal-envelope.md  0002-canonical-payload-hashing-timestamps-replay.md
schemas/: signal-envelope.schema.json  sprint-backlog.schema.json
scripts/: next_sprints.py  validate_vectors.py
src/signalforge/: __init__.py  canonical.py  envelope.py  sprints.py
tests/: test_signal_envelope_vectors.py  test_sprint_orchestration.py  test_sprints.py
tests/vectors/: conflicting-evidence.json  degraded-mode.json  hash-mismatch.json  missing-provenance.json  origin-conflict.json  replay-suspected.json  stale-signal.json  valid-minimal-envelope.json
