[build-system]
requires = ["hatchling>=1.25"]
build-backend = "hatchling.build"

[project]
name = "signalforge"
version = "0.1.0"
description = "SignalForge reference tooling for Lantern Protocol signal envelopes."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "Apache-2.0" }
authors = [
  { name = "Lantern Protocol" }
]
dependencies = [
  "jsonschema>=4.22",
  "pydantic>=2.8"
]

[project.optional-dependencies]
dev = [
  "pytest>=9.1.1",
  "ruff>=0.5"
]

[tool.hatch.build.targets.wheel]
packages = ["src/signalforge"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[tool.ruff]
line-length = 120
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]
ignore = ["I001"]
